added comments on jupyter notebook

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -166,7 +166,19 @@
     "**vision** <br>\n",
     "The vision functions can detect the position of the obstacles, goal and thymio \n",
     "as well as its orientation. It also detects the map boundaries and projects it. \n",
-    "the draw functions can be used for debugging\n"
+    "Draw functions can be used for debugging.<br>\n",
+    "Each feature to detect has a distinct color so we can separate them with a filter.\n",
+    "Several options have been investigate but abandoned because not robust enough. For example detecting circles \n",
+    "directly with the *circle hough function* or detecting corners with *goodFeaturesToTrack()*. We also tried to compute\n",
+    "the thymio's position and orientation by placing a triangle on top of it indicating where it was looking. But that was \n",
+    "also not precise.<br> \n",
+    "What turned out the be the best choice was computing the contours of a feature and then it's center using \n",
+    "respectively *findContours()* and *moments()* <br>\n",
+    "This method is used to determine the map boundaries, a square is placed at each corner, its center matching the corner.\n",
+    "Knowing the corners position one can then project the image.\n",
+    "The goal and the thymio are similarly detected. The latter has two circles on top of it, the biggest determines its \n",
+    "position and the smallest its orientation using basic geometry.<br>\n",
+    "The obstacles are also detected with *findContours()* but are then approximated with *approxPolyDP()* to match a polygon\n"
    ],
    "metadata": {
     "collapsed": false,
