--- a/Main.ipynb
+++ b/Main.ipynb
@@ -179,8 +179,11 @@
     "as well as its orientation. It also detects the map boundaries and projects it. \n",
     "the draw functions can be used for debugging\n",
     "\n",
-    "The polygons are dilated to avoid colision with the robot.\n",
-    "If 2 dilated polygons touches, they are merged to avoid.\n",
+    "**Obsatcle Management**\n",
+    "Ostacle are managed as polygon, defnied by a list of their vertices.\n",
+    "\n",
+    "The polygons are exaplanded to avoid colision between obstacle and robot..\n",
+    "If 2 obstacle are close to eachother, their expanded polygon will touch, and they will be merged into one big obstacle.\n",
     "\n",
     "- Library used for polygon manipulation: Shapely\n",
     "https://shapely.readthedocs.io/en/stable/manual.html\n",
@@ -217,7 +220,7 @@
    "source": [
     "Path finding\n",
     "We create a Visibility Graph of the map, then perform an A* search on the given graph, and return the shortest path.\n",
-    "In contrary to the voronoi diagram method, this method is optimale in term of path length.\n",
+    "In contrary to the Voronoi diagram method, this method is optimale in term of path length.\n",
     "\n",
     "Librairy used for visiblity Graph generation and Graph search:\n",
     "https://github.com/MrMinimal64/extremitypathfinder"
@@ -239,7 +242,37 @@
    "source": [
     "path = Pathplanning.find_path([x, y], goal, obsList, plotFlag=True)\n",
     "\n",
-    "path = [np.array(tup) for tup in path]  # converting tuples in np array\n",
+    "path = [np.array(tup) for tup in path]  # converting tuples in np array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "source": [
+    "**Global Controller**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
     "glob_ctrl = global_controller.GlobalController(path, tubeTol=4, outOfTubeAvancementTarget=3, noTurningDistance=3 )"
    ]
   },
@@ -394,7 +427,7 @@
     }
    },
    "source": [
-    "main loop"
+    "#"
    ]
   },
   {
